<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_main"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_25"
    tools:context=".mvp.v.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_34"
        android:paddingRight="@dimen/dp_34">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_info"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp_30"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/title_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/bg_title" />
        </FrameLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|right"
            android:text="3月19日    周六   21:30"
            android:textColor="@color/color_7fffffff"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/alarm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_40"
            android:drawableLeft="@mipmap/bg_alarm"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center_vertical"
            android:text="@string/title_alarm"
            android:textColor="@color/color_37a991"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/call_service"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:drawableLeft="@mipmap/bg_alarm"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center_vertical"
            android:text="@string/title_call_service"
            android:textColor="@color/color_37a991"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/vedio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:drawableLeft="@mipmap/bg_alarm"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center_vertical"
            android:text="@string/title_vedio"
            android:textColor="@color/color_37a991"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <com.techjumper.polyhome.b.home.widget.MyViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_470"
        android:layout_marginTop="@dimen/dp_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dot_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_home" />

        <ImageView
            android:id="@+id/dot_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_13"
            android:src="@drawable/selector_point" />
    </LinearLayout>
</LinearLayout>
