<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/dp_8">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.techjumper.polyhome.b.home.widget.SquareView
                android:id="@+id/jujia"
                android:layout_width="@dimen/dp_160"
                android:layout_height="@dimen/dp_160"
                app:bg="@drawable/selector_button_0ca9e4"
                app:content_img="@mipmap/bg_jujia"
                app:title_text="@string/title_jujia" />

            <com.techjumper.polyhome.b.home.widget.SquareView
                android:id="@+id/smarthome"
                android:layout_width="@dimen/dp_160"
                android:layout_height="@dimen/dp_160"
                android:layout_marginLeft="@dimen/dp_10"
                app:bg="@drawable/selector_button_0ca9e4"
                app:content_img="@mipmap/bg_smarthome_new"
                app:title_text="@string/title_smarthome" />

            <com.techjumper.polyhome.b.home.widget.SquareView
                android:id="@+id/property"
                android:layout_width="@dimen/dp_160"
                android:layout_height="@dimen/dp_160"
                android:layout_marginLeft="@dimen/dp_10"
                app:bg="@drawable/selector_button_0ca9e4"
                app:content_img="@mipmap/bg_property"
                app:title_text="@string/title_jujia_call_service" />

        </LinearLayout>

        <com.techjumper.polyhome.b.home.widget.AdViewPager
            android:id="@+id/advp"
            android:layout_width="@dimen/dp_500"
            android:layout_height="@dimen/dp_330"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@mipmap/bg_ad"
            android:visibility="visible" />

        <FrameLayout
            android:id="@+id/ad"
            android:layout_width="@dimen/dp_500"
            android:layout_height="@dimen/dp_330"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color_4Dffffff"
            android:visibility="gone">

            <com.techjumper.polyhome.b.home.widget.MyTextureView
                android:id="@+id/video_ad"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/image_ad"
                android:layout_width="@dimen/dp_500"
                android:layout_height="@dimen/dp_330"
                android:scaleType="centerCrop"
                android:src="@mipmap/bg_ad" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/layout_info_notice" />

            <com.techjumper.polyhome.b.home.widget.FamilyModelView
                android:layout_width="@dimen/dp_330"
                android:layout_height="@dimen/dp_160"
                android:layout_marginTop="@dimen/dp_10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="vertical">

            <com.techjumper.polyhome.b.home.widget.SquareView
                android:id="@+id/fp_temperature"
                android:layout_width="@dimen/dp_160"
                android:layout_height="@dimen/dp_160"
                app:bg_color="@color/color_466780"
                app:content_text="00"
                app:quarter_img="@mipmap/bg_weather"
                app:quarter_layout_visible="true"
                app:title_text="pm2.5" />

            <com.techjumper.polyhome.b.home.widget.SquareView
                android:id="@+id/fp_restrict"
                android:layout_width="@dimen/dp_160"
                android:layout_height="@dimen/dp_160"
                android:layout_marginTop="@dimen/dp_10"
                app:bg_color="@color/color_0ca9e4"
                app:content_text="09"
                app:title_text="周五限行" />

            <com.techjumper.polyhome.b.home.widget.SquareView
                android:id="@+id/shopping"
                android:layout_width="@dimen/dp_160"
                android:layout_height="@dimen/dp_160"
                android:layout_marginTop="@dimen/dp_10"
                app:bg="@drawable/selector_button_0ca9e4"
                app:content_img="@mipmap/bg_shopping_new"
                app:title_text="@string/title_shopping" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
